data/derived/comb/progs/unify/prog1043.ml.out
Characters 59-61:
  | hd -> hd + (sumList tl);;
          ^^
Error: This expression has type 'a list
       but an expression was expected of type int
